--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </p>
     <p>
         This change is done in feature 1 branch of localRepo
-        
     </p>
+    <p>Add new feature in main [button]</p>
 </body>
 </html>
