--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut iste cupiditate molestiae quae velit eum commodi illo corrupti, rem aperiam eius necessitatibus officia inventore dolorum consequatur. Voluptatibus pariatur ut error.
     </p>
     <p>
-        This change is done in feature 1 branch of localRepo
-    </p>
-    <p>Add new feature in main [button]</p>
+        This change is done in feature 1 branch of localRepo [button]
+    <P>
 </body>
 </html>
