--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Aut iste cupiditate molestiae quae velit eum commodi illo corrupti, rem aperiam eius necessitatibus officia inventore dolorum consequatur. Voluptatibus pariatur ut error.
     </p>
     <p>
-        This change is done in feature 1 branch of localRepo
+        This change is done in feature 1 branch of localRepo [feature 1 main changes]
         
     </p>
 </body>
